--- a/dash/index.html
+++ b/dash/index.html
@@ -62,12 +62,12 @@
               </li>
               <li class="dropdown">
                 <button
-                  class="dropdown-toggle"
+                  class="dropdown-toggle d-flex align-items-center justify-content-center"
                   type="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  <i class="fas fa-user-circle"></i> <span>Accounts</span>
+                  <i class="fas fa-user-circle me-1"></i> <span>Accounts</span>
                 </button>
                 <ul class="dropdown-menu shadow">
                   <li>
