add new dashboard world-1

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
           >
         </h5>
         <h5><a href="./dash/index.html">2. Dashbaord 2 (Dash)</a></h5>
+        <h5><a href="./world-1/index.html">3. Dashbaord 3 (World-1)</a></h5>
       </div>
     </section>
 
