add new dashboard world-1

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
       <div class="container">
         <h5>
           <a href="./netgain-dash/index.html"
-            >1. Dashbaord 1 (Net Gain Dashbaord)</a
+            >1. Dashboard 1 (Net Gain Dashboard)</a
           >
         </h5>
-        <h5><a href="./dash/index.html">2. Dashbaord 2 (Dash)</a></h5>
-        <h5><a href="./world-1/index.html">3. Dashbaord 3 (World-1)</a></h5>
+        <h5><a href="./dash/index.html">2. Dashboard 2 (Dash)</a></h5>
+        <h5><a href="./world-1/index.html">3. Dashboard 3 (World-1)</a></h5>
       </div>
     </section>
 
